k8s/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-was01  #k8s-test-was01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-was01 #
  template:
    metadata:
      labels:
        app: test-was01
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: test-was01 
          image: testconregyhg.azurecr.io/chicken:7bbe25443e72ea5e784230bd5c4dfe784d728d50
          ports:
            - containerPort: 8090 #8090
